k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nihongo-backend
  labels:
    app: nihongo-backend
spec:
  type: ClusterIP
  selector:
    app: nihongo-backend
  ports:
    - name: http
      port: 80
      targetPort: http
