k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nihongo-backend
  labels:
    app: nihongo-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  # tls:
  #   - hosts:
  #       - api.nihongotest.shop
  #     secretName: nihongo-backend-tls
  rules:
    - host: api.nihongotest.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nihongo-backend
                port:
                  number: 80
